<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.infinitest</groupId>
	<artifactId>infinitest-parent</artifactId>
	<packaging>pom</packaging>
	<name>Infinitest Parent POM</name>
	<version>5.3.2-SNAPSHOT</version>
	<url>http://infinitest.github.com/</url>

	<modules>
		<module>infinitest-lib</module>
		<module>infinitest-runner</module>
		<module>infinitest-classloader</module>
		<module>infinitest-intellij</module>
		<module>infinitest-eclipse-feature</module>
		<module>infinitest-eclipse</module>
		<module>infinitest-runner-test</module>
	</modules>

	<prerequisites>
		<maven>3.1</maven>
	</prerequisites>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>

		<mockito.version>4.7.0</mockito.version>
		<junit.version>4.12</junit.version>
		<junit5.version>5.0.3</junit5.version>
		<junit5-platform.version>1.0.3</junit5-platform.version>
		<guava.version>18.0</guava.version>
		<hamcrest.version>1.3</hamcrest.version>
		<testng.version>6.8.8</testng.version>
		<assertj.version>3.11.1</assertj.version>
		<autovalue.version>1.3</autovalue.version>
		<jcommander.version>1.35</jcommander.version>
		<surefire.version>3.0.0-M7</surefire.version>
		
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
		<sonar.organization>infinitest</sonar.organization>
	</properties>

	<profiles>
		<profile>
			<id>OSX</id>
			<activation>
				<os>
					<family>mac</family>
				</os>
			</activation>
			<properties>
				<!-- configure surefire arg line to stop stealing the focus -->
				<argLine>-Dapple.awt.UIElement=true</argLine>
			</properties>
		</profile>

		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-jarsigner-plugin</artifactId>
						<executions>
							<execution>
								<id>sign-jars</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<keystore>${keystore-file}</keystore>
							<alias>infinitest</alias>
							<storepass>${keystore-password}</storepass>
							<keypass>${keystore-password}</keypass>
							<removeExistingSignatures>true</removeExistingSignatures>
							<includes>
								<include>**/*.jar</include>
							</includes>
							<excludeClassifiers>
								<excludeClassifier>dist</excludeClassifier>
							</excludeClassifiers>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<developers>
		<developer>
			<id>benrady</id>
			<name>Ben Rady</name>
		</developer>
		<developer>
			<id>rfciii</id>
			<name>Rod Coffin</name>
		</developer>
		<developer>
			<name>Ryan Breidenbach</name>
		</developer>
		<developer>
			<id>dgageot</id>
			<name>David Gageot</name>
		</developer>
		<developer>
			<id>apupier</id>
			<name>Aurélien Pupier</name>
		</developer>
		<developer>
			<id>sarod</id>
			<name>Sébastien Arod</name>
		</developer>
	</developers>

	<scm>
		<connection>scm:git://github.com/infinitest/infinitest.git</connection>
		<developerConnection>scm:git@github.com:infinitest/infinitest.git</developerConnection>
	</scm>

	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/infinitest/infinitest/issues</url>
	</issueManagement>

	<licenses>
		<license>
			<name>MIT</name>
			<url>http://opensource.org/licenses/MIT</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-clean-plugin</artifactId>
					<version>2.6.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-jar-plugin</artifactId>
					<version>2.5</version>
				</plugin>
				<plugin>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>2.9</version>
				</plugin>
				<plugin>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-eclipse-plugin</artifactId>
					<version>2.9</version>
				</plugin>
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.7</version>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${surefire.version}</version>
				</plugin>
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.5.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.4</version>
				</plugin>
				<plugin>
					<artifactId>maven-enforcer-plugin</artifactId>
					<version>1.3.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-jarsigner-plugin</artifactId>
					<version>3.0.0</version>
				</plugin>
				<plugin>
					<groupId>com.mycila.maven-license-plugin</groupId>
					<artifactId>maven-license-plugin</artifactId>
					<version>1.9.0</version>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.8.8</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<artifactId>maven-eclipse-plugin</artifactId>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
					<additionalConfig>
						<file>
							<name>.settings/org.eclipse.jdt.core.prefs</name>
							<location>${user.dir}/artifacts/eclipse_settings/org.eclipse.jdt.core.prefs</location>
						</file>
						<file>
							<name>.settings/org.eclipse.jdt.ui.prefs</name>
							<location>${user.dir}/artifacts/eclipse_settings/org.eclipse.jdt.ui.prefs</location>
						</file>
					</additionalConfig>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>surefire-junit47</artifactId>
						<version>${surefire.version}</version>
					</dependency>
				</dependencies>
				<configuration>
					<includes>
						<include>**/When*.java</include>
						<include>**/Test*.java</include>
						<include>**/*Test.java</include>
						<include>**/*TestCase.java</include>
						<include>**/*Simulation.java</include>
					</includes>
					<excludes>
						<exclude>**/*$*</exclude>
						<exclude>com/fakeco/**</exclude>
						
						<exclude>**/exampletests/**</exclude>
					</excludes>
					<!-- argLine is configured using a property to simplify jacoco configuration -->
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-enforcer-plugin</artifactId>
				<executions>
					<execution>
						<id>enforce-versions-compatibility</id>
						<phase>verify</phase>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireUpperBoundDep />
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<inherited>false</inherited>
				<groupId>com.mycila.maven-license-plugin</groupId>
				<artifactId>maven-license-plugin</artifactId>
				<configuration>
					<header>${project.basedir}/COPYING</header>
					<failIfMissing>true</failIfMissing>
					<strictCheck>true</strictCheck>
					<aggregate>true</aggregate>
					<includes>
						<include>**/infinitest-*/src/main/java/**</include>
						<include>**/infinitest-*/src/test/java/**</include>
					</includes>
					<excludes>
						<exclude>tests/**</exclude>
					</excludes>
					<mapping>
						<java>SLASHSTAR_STYLE</java>
					</mapping>
				</configuration>
				<executions>
					<execution>
						<id>enforce-license-headers</id>
						<phase>validate</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>default-prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<!-- report as part of test to let travis build reports for codecov -->
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
